# basilico

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
public/: theme-loader.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  test_utils.rs  watcher.rs
src-tauri/src/commands/: bisect.rs  blame.rs  branch.rs  commit.rs  conflict_resolver.rs  diff.rs  gpg.rs  history.rs  log.rs  merge.rs  mod.rs  rebase.rs  reflog.rs  remote.rs  repo.rs  search.rs  settings.rs  staging.rs  stash.rs  stash_inspector.rs  submodule.rs  tag.rs  worktree.rs
src-tauri/src/git/: credentials.rs  diff_parser.rs  graph.rs  helpers.rs  mod.rs  repository.rs  utils.rs
src/components/: WelcomeScreen.css  WelcomeScreen.tsx
src/components/__tests__/: WelcomeScreen.test.tsx
src/components/bisect/: BisectWizard.css  BisectWizard.tsx
src/components/blame/: BlameView.css  BlameView.tsx
src/components/clean/: CleanModal.css  CleanModal.tsx
src/components/command-palette/: CommandPalette.css  CommandPalette.tsx
src/components/compare/: CompareView.css  CompareView.tsx
src/components/diff/: DiffView.css  DiffView.tsx
src/components/graph/: CommitDetail.css  CommitDetail.tsx  CommitGraph.tsx  CommitList.css  CommitList.tsx  FileViewerModal.css  FileViewerModal.tsx  GitGraphFlow.css  GitGraphFlow.tsx  ResetModal.css  ResetModal.tsx
src/components/history/: FileHistory.css  FileHistory.tsx
src/components/layout/: Sidebar.css  (+18 more)
src/hooks/: use-updater.ts
src/lib/: error-messages.ts  git-types.ts  git-validation.ts  tauri-commands.ts  theme-presets.ts  use-dark-mode.ts  utils.ts
src/store/: repo-store.ts  store-helpers.ts  types.ts  ui-store.ts
src/styles/: index.css  theme.css
(+42 files in other folders)
